--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<body>
 		<div class="home-wrapper">
 			<header>
-				<div class="container">
+				<div class="container nav-container">
 					<a href="#home"><img src="images/logo.png" alt="Logo Studio Dev"></a>
 					<nav>
 						<a href="#home" class="active">HOME</a>
