--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		</section>
 
 		<section id="video">
-			<iframe width="640" height="360" src="https://www.youtube.com/embed/HQmmM_qwG4k?ecver=1" frameborder="0" allowfullscreen></iframe>
+			<iframe width="640" height="360" src="https://www.youtube.com/embed/IyBq4AdBKJI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</section>
 
 		<section id="portafolio">
