apply flexbox layout to portfolio section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<nav>
 						<a href="#home" class="active">HOME</a>
 						<a href="#servicios">SERVICIOS</a>
-						<a href="#portafolio">PORTAFOLIO</a>
+						<a href="#portfolio">PORTFOLIO</a>
 						<a href="#contacto">CONTACTO</a>
 					</nav>
 				</div>
@@ -69,39 +69,41 @@
 			<iframe width="640" height="360" src="https://www.youtube.com/embed/IyBq4AdBKJI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</section>
 
-		<section id="portafolio">
+		<section id="portfolio">
 			<div class="container">
-				<h2>PORTAFOLIO</h2>
+				<h2>PORTFOLIO</h2>
 
-				<div class="box">
-					<img src="images/portafolio/roundicons.png" alt="Iconos redondeados">
-					<h3>Iconos redondeados</h3>
-					<p>Creamos los mejores iconos redondeados del mercado</p>
-				</div>
-				<div class="box">
-					<img src="images/portafolio/treehouse.png" alt="Creative Digital">
-					<h3>Creative Digital</h3>
-					<p>Excelente trabajo que nos quedo para Creative Digital Inc.</p>
-				</div>
-				<div class="box">
-					<img src="images/portafolio/escape.png" alt="We can do that">
-					<h3>We can do that</h3>
-					<p>Increible elaboración del concepto que hicimos para Yup, we can do that.</p>
-				</div>
-				<div class="box">
-					<img src="images/portafolio/escape.png" alt="Escape">
-					<h3>Escape</h3>
-					<p>Fue creado para profesionales independientes y startups.</p>
-				</div>
-				<div class="box">
-					<img src="images/portafolio/dreams.png" alt="Dreams">
-					<h3>Dreams</h3>
-					<p>Una aplicación que nos quedo muy genial con Ruby on Rails.</p>
-				</div>
-				<div class="box">
-					<img src="images/portafolio/startup-framework.png" alt="Startup Framework">
-					<h3>Startup Framework</h3>
-					<p>Este es increible. Es un desarrollo que hicimos ya hace un tiempo.</p>
+				<div class="portfolio-container">
+					<div class="box">
+						<img src="images/portafolio/roundicons.png" alt="Iconos redondeados">
+						<h3>Iconos redondeados</h3>
+						<p>Creamos los mejores iconos redondeados del mercado</p>
+					</div>
+					<div class="box">
+						<img src="images/portafolio/treehouse.png" alt="Creative Digital">
+						<h3>Creative Digital</h3>
+						<p>Excelente trabajo que nos quedo para Creative Digital Inc.</p>
+					</div>
+					<div class="box">
+						<img src="images/portafolio/escape.png" alt="We can do that">
+						<h3>We can do that</h3>
+						<p>Increible elaboración del concepto que hicimos para Yup, we can do that.</p>
+					</div>
+					<div class="box">
+						<img src="images/portafolio/escape.png" alt="Escape">
+						<h3>Escape</h3>
+						<p>Fue creado para profesionales independientes y startups.</p>
+					</div>
+					<div class="box">
+						<img src="images/portafolio/dreams.png" alt="Dreams">
+						<h3>Dreams</h3>
+						<p>Una aplicación que nos quedo muy genial con Ruby on Rails.</p>
+					</div>
+					<div class="box">
+						<img src="images/portafolio/startup-framework.png" alt="Startup Framework">
+						<h3>Startup Framework</h3>
+						<p>Este es increible. Es un desarrollo que hicimos ya hace un tiempo.</p>
+					</div>
 				</div>
 			</div>
 		</section>
