update language in the code

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 					<a href="#home"><img src="images/logo.png" alt="Logo Studio Dev"></a>
 					<nav>
 						<a href="#home" class="active">HOME</a>
-						<a href="#servicios">SERVICIOS</a>
-						<a href="#portfolio">PORTFOLIO</a>
-						<a href="#contacto">CONTACTO</a>
+						<a href="#services">SERVICIOS</a>
+						<a href="#portfolio">PORTAFOLIO</a>
+						<a href="#contact">CONTACTO</a>
 					</nav>
 				</div>
 			</header>
@@ -43,7 +43,7 @@
 			</section>
 		</div>
 
-		<section id="servicios" class="container">
+		<section id="services" class="container">
 			<h2>SERVICIOS</h2>
 
 			<div class="box-container">
@@ -71,7 +71,7 @@
 
 		<section id="portfolio">
 			<div class="container">
-				<h2>PORTFOLIO</h2>
+				<h2>PORTAFOLIO</h2>
 
 				<div class="portfolio-container">
 					<div class="box">
@@ -108,7 +108,7 @@
 			</div>
 		</section>
 
-		<section id="contacto">
+		<section id="contact">
 			<h2>CONTACTO</h2>
 
 			<form>
