adjust all sections to mobile

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 		<meta charset="UTF-8">
 		<title>Studio Dev</title>
 
-		<link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<script src="https://use.fontawesome.com/7145804ffe.js"></script>
 		<script type="text/javascript" src="http://livejs.com/live.js"></script>
@@ -64,7 +65,7 @@
 		</section>
 
 		<section id="video">
-			<iframe width="640" height="360" src="https://www.youtube.com/embed/IyBq4AdBKJI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<iframe class="video-size" src="https://www.youtube.com/embed/IyBq4AdBKJI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</section>
 
 		<section id="portfolio">
