--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+		<link rel="stylesheet" href="css/responsive.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<script src="https://use.fontawesome.com/7145804ffe.js"></script>
