--- a/index.html
+++ b/index.html
@@ -43,24 +43,26 @@
 			</section>
 		</div>
 
-		<section id="services" class="container">
-			<h2>SERVICIOS</h2>
+		<section id="services">
+			<div class="container">
+				<h2>SERVICIOS</h2>
 
-			<div class="box-container">
-				<div class="box">
-					<img src="images/web-design.png" alt="Web Design">
-					<h3>Web Design</h3>
-					<p>Somos expertos en Web Design. Nuestro equipo es por mucho el mejor. Nadie nos hace competencia.</p>
-				</div>
-				<div class="box">
-					<img src="images/web-development.png" alt="Web Development">
-					<h3>Web Development</h3>
-					<p>Somos expertos en Web Development. Usamos HTML5, CSS3, Git, Bootstrap, Ruby on Rails, y JavaScript.</p>
-				</div>
-				<div class="box">
-					<img src="images/ux-ui.png" alt="Mobile Development">
-					<h3>Mobile Development</h3>
-					<p>Somos expertos en Mobile Development. Creemos que el futuro esta en responsive design y no nativo </p>
+				<div class="box-container">
+					<div class="box">
+						<img src="images/web-design.png" alt="Web Design">
+						<h3>Web Design</h3>
+						<p>Somos expertos en Web Design. Nuestro equipo es por mucho el mejor. Nadie nos hace competencia.</p>
+					</div>
+					<div class="box">
+						<img src="images/web-development.png" alt="Web Development">
+						<h3>Web Development</h3>
+						<p>Somos expertos en Web Development. Usamos HTML5, CSS3, Git, Bootstrap, Ruby on Rails, y JavaScript.</p>
+					</div>
+					<div class="box">
+						<img src="images/ux-ui.png" alt="Mobile Development">
+						<h3>Mobile Development</h3>
+						<p>Somos expertos en Mobile Development. Creemos que el futuro esta en responsive design y no nativo </p>
+					</div>
 				</div>
 			</div>
 		</section>
